--- a/app/views/nhs_templates/supermarkets.html
+++ b/app/views/nhs_templates/supermarkets.html
@@ -4,7 +4,7 @@
 {{ summary.nhsNumber }} - Supermarkets
 {% endblock %}
 
-{% block beforeContent %}
+{% block beforeAppContent %}
   <div class="govuk-breadcrumbs">
     <ol class="govuk-breadcrumbs__list">
       <li class="govuk-breadcrumbs__list-item">
