--- a/app/views/nhs_templates/summary.html
+++ b/app/views/nhs_templates/summary.html
@@ -4,7 +4,7 @@
 NHS: {{ summary.nhsNumber }} - SVP Support Toolkit
 {% endblock %}
 
-{% block beforeContent %}
+{% block beforeAppContent %}
 <div class="govuk-breadcrumbs">
     <ol class="govuk-breadcrumbs__list">
         <li class="govuk-breadcrumbs__list-item">
