--- a/app/views/nhs_templates/timeline.html
+++ b/app/views/nhs_templates/timeline.html
@@ -4,7 +4,7 @@
 {{ summary.nhsNumber }} - Timeline
 {% endblock %}
 
-{% block beforeContent %}
+{% block beforeAppContent %}
 <div class="govuk-breadcrumbs">
     <ol class="govuk-breadcrumbs__list">
         <li class="govuk-breadcrumbs__list-item">
