--- a/app/views/login.html
+++ b/app/views/login.html
@@ -11,11 +11,11 @@ Sign in - SVP Support Toolkit
 		<p>This page is a placeholder - no account details are needed for this prototype</p>
 
 
-        <form class="form" action="/home" method="post">
+        <form class="form" action="/confirmation" method="post">
 
             <div class="govuk-form-group">
                 <label class="govuk-label" for="username">
-                    Username or email
+                    Email
                 </label>
                 <input class="govuk-input govuk-input--width-20" id="username" name="username" type="text">
             </div>
