remove link to search without an nhs number

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -31,9 +31,9 @@ Find a user - SVP Support Toolkit
             </button>
 
         </form>
-        <div>
-            <a href="#" class="govuk-link govuk-body">I don't know their NHS number</a>
-        </div>
+<!--        <div>-->
+<!--            <a href="#" class="govuk-link govuk-body">I don't know their NHS number</a>-->
+<!--        </div>-->
     </div>
 </div>
 {% endblock %}
