--- a/app/views/validate.html
+++ b/app/views/validate.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-Find a user - SVP Support Toolkit
+Confirm date of birth - SVP Support Toolkit
 {% endblock %}
 
 {% block beforeAppContent %}
