--- a/app/views/nhs_templates/summary.html
+++ b/app/views/nhs_templates/summary.html
@@ -100,6 +100,35 @@ NHS: {{ summary.nhsNumber }} - SVP Support Toolkit
         </section>
 
         <section class="govuk-!-margin-bottom-9">
+            <h2 class="govuk-heading-m">Shielded Patient status</h2>
+
+            <table class="govuk-table">
+                <tbody class="govuk-table__body">
+                <tr class="govuk-table__row">
+                    <td class="govuk-table__cell">
+                        Is this person on the SPL?
+                    </td>
+                    <td class="govuk-table__cell">
+                        {% if spl.value %}
+                        <strong class="govuk-tag">
+                            Yes
+                        </strong>
+                        {% else %}
+                        <strong class="govuk-tag govuk-tag--grey">
+                            No
+                        </strong>
+                        {% endif %}
+                    </td>
+                    <td class="govuk-table__cell">
+                        {% if spl.action %}{{ spl.action }} <br/>{% endif %}
+                        {{ spl.date }}
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </section>
+
+        <section class="govuk-!-margin-bottom-9">
             <h2 class="govuk-heading-m">Summary</h2>
             <span id="record-summary-hint" class="govuk-hint">
                 This quick summary can be used to attach to support tickets.
