change supermarket register link to call to action

--- a/app/views/nhs_templates/supermarkets.html
+++ b/app/views/nhs_templates/supermarkets.html
@@ -96,7 +96,7 @@
                 </tbody>
             </table>
             {% if not supermarkets.registered.value %}
-            <a class="govuk-link govuk-link--no-visited-state" href="supermarkets/register">Register this person with supermarkets now</a>
+            <a class="govuk-button" href="supermarkets/register">Register this person with supermarkets now</a>
             {% endif %}
         </section>
 
