fix bug in timeline causing accordian to misfire

--- a/app/views/nhs_templates/timeline.html
+++ b/app/views/nhs_templates/timeline.html
@@ -84,7 +84,7 @@
                             {% endfor %}
                             </tbody>
                         </table>
-                    </div
+                    </div>
                 </div>
                 {% endfor %}
 
