update details - add multiple badges - add deceased flag and date

--- a/app/views/includes/footer.html
+++ b/app/views/includes/footer.html
@@ -29,6 +29,11 @@
                             Register for supermarkets
                         </a>
                     </li>
+                    <li class="govuk-footer__list-item govuk-list--number">
+                        <a class="govuk-footer__link" href="/records/2082035560/summary">
+                            Deceased
+                        </a>
+                    </li>
                 </ol>
             </div>
         </div>
