--- a/app/views/nhs_templates/timeline.html
+++ b/app/views/nhs_templates/timeline.html
@@ -62,14 +62,12 @@
                         </h2>
                         <div class="govuk-accordion__section-summary govuk-body"
                              id="accordion-with-summary-sections-summary-1">
-                            {% if event.badge %}
                             <p>{{ event.description }}</p>
-                            <div class="govuk-tag {% if event.badge.inverted %}govuk-tag--grey{% endif %}">{{
-                                event.badge.text }}
-                            </div>
-                            {% else %}
-                            {{ event.description }}
-                            {% endif %}
+                            {% for badge in event.badges %}
+                            <span class="govuk-tag {% if badge.inverted %}govuk-tag--grey{% endif %}">{{
+                                badge.text }}
+                            </span>
+                            {% endfor %}
                         </div>
                     </div>
                     <div id="accordion-with-summary-sections-content-1" class="govuk-accordion__section-content"
